@@ -195,101 +195,6 @@ XMLData::get_xpaths(Glib::ustring code)
 
 
 /**
- * Return the next xpath depending on command line options
- */
-Glib::ustring
-XMLData::get_next_xpath(Glib::ustring code, bool initialize)
-{
-	Glib::ustring xpath = "";
-	static int xpath_index;
-	static bool last_xpath;
-
-	if (initialize) {
-		xpath_index = 0;
-		last_xpath = false;
-	}
-	
-	// No more xpaths available, so return an empty xpath
-	if (last_xpath) {
-		last_xpath = false;
-		return xpath;
-	}
-	
-	// There are no arguments on the command line, so show all codes
-	if (code.empty()) {
-		xpath = "iso_" + iso + "_entry";
-		last_xpath = true;
-	} else {
-		if (iso == "639") {
-			if (code.length() == 2) {
-				xpath = "//iso_639_entry[@iso_639_1_code='";
-				xpath += code.lowercase();
-				xpath += "']";
-				last_xpath = true;
-			} else {
-				switch (xpath_index) {
-				case 0:
-					xpath = "//iso_639_entry[@iso_639_2B_code='";
-					xpath += code.lowercase();
-					xpath += "']";
-					xpath_index++;
-					break;
-				case 1:
-					xpath = "//iso_639_entry[@iso_639_2T_code='";
-					xpath += code.lowercase();
-					xpath += "']";
-					xpath_index = 0;
-					last_xpath = true;
-					break;
-				}
-			}
-		} else if (iso == "4217") {
-			if (isdigit(code.at(0))) {
-				xpath = "//iso_4217_entry[@numeric_code='";
-				xpath += code.uppercase();
-				xpath += "']";
-			} else {
-				xpath = "//iso_4217_entry[@letter_code='";
-				xpath += code.uppercase();
-				xpath += "']";
-			}
-			last_xpath = true;
-		} else if (iso == "15924") {
-			if (isdigit(code.at(0))) {
-				xpath = "//iso_15924_entry[@numeric_code='";
-				xpath += code.uppercase();
-				xpath += "']";
-			} else {
-				xpath = "//iso_15924_entry[@alpha_4_code='";
-				xpath += code.substr(0, 1).uppercase();
-				xpath += code.substr(1, code.length()).lowercase();
-				xpath += "']";
-			}
-			last_xpath = true;
-		} else {
-			// Default to ISO 3166
-			if (code.length() == 2) {
-				xpath = "//iso_3166_entry[@alpha_2_code='";
-				xpath += code.uppercase();
-				xpath += "']";
-			} else if (isdigit(code.at(0))) {
-				xpath = "//iso_3166_entry[@numeric_code='";
-				xpath += code.uppercase();
-				xpath += "']";
-			} else {
-				xpath = "//iso_3166_entry[@alpha_3_code='";
-				xpath += code.uppercase();
-				xpath += "']";
-			}
-			last_xpath = true;
-		}
-	}
-	return xpath;
-}
-
-
-
-/**
  * Show codes in the XML data source.
  * 
  * If argc is not null, the selected codes from the command line
