@@ -48,7 +48,6 @@ public:
 	void set_output_locale(Glib::ustring output_locale);
 	void set_attribute_name(Glib::ustring attr_name);
 	vector<Glib::ustring> get_xpaths(Glib::ustring code);
-	Glib::ustring get_next_xpath(Glib::ustring code, bool initialize);
 	void show(Glib::ustring code);
 };
 
